@@ -3438,3 +3438,7 @@ table {
 table.adminlist .item-associations li a  {
 	color: #ffffff;
 }
+
+// Bootstrap Tooltips (need to load last, something is overriding these styles in the CSS, debug later ;-) )
+@import "../../../../media/jui/less/tooltip.less";
+
