@@ -362,7 +362,7 @@ abstract class JHtmlBootstrap
 		self::framework();
 
 		$opt['animation'] = isset($params['animation']) ? $params['animation'] : null;
-		$opt['html'] = isset($params['html']) ? $params['html'] : null;
+		$opt['html'] = isset($params['html']) ? $params['html'] : true;
 		$opt['placement'] = isset($params['placement']) ? $params['placement'] : null;
 		$opt['selector'] = isset($params['selector']) ? $params['selector'] : null;
 		$opt['title'] = isset($params['title']) ? $params['title'] : null;
@@ -460,7 +460,7 @@ abstract class JHtmlBootstrap
 
 			// Setup options object
 			$opt['animation'] = (isset($params['animation']) && ($params['animation'])) ? (boolean) $params['animation'] : null;
-			$opt['html'] = (isset($params['html']) && ($params['html'])) ? (boolean) $params['html'] : null;
+			$opt['html'] = (isset($params['html']) && ($params['html'])) ? (boolean) $params['html'] : true;
 			$opt['placement'] = (isset($params['placement']) && ($params['placement'])) ? (string) $params['placement'] : null;
 			$opt['selector'] = (isset($params['selector']) && ($params['selector'])) ? (string) $params['selector'] : null;
 			$opt['title'] = (isset($params['title']) && ($params['title'])) ? (string) $params['title'] : null;
